--- a/src/app/components/frontpage/frontpage.component.css
+++ b/src/app/components/frontpage/frontpage.component.css
@@ -40,17 +40,16 @@
 
 .rating {
     
-    gap: 5px; /* Ruimte tussen de sterren */
+    gap: 5px; 
     align-items: center;
     font-size: 20px;
-    /* Pas dit aan voor grotere of kleinere sterren */
   }
   
   .star {
-    color: #FFD700; /* Gouden kleur voor actieve sterren */
+    color: #FFD700; 
   }
   
   .star:nth-child(n+5) {
-    color: #d3d3d3; /* Grijze kleur voor inactieve sterren */
+    color: #d3d3d3; 
   }
   
