--- a/src/app/components/activity/activity-map/activity-map.component.css
+++ b/src/app/components/activity/activity-map/activity-map.component.css
@@ -77,10 +77,9 @@
   background-color: #e0e0e0;
 }
 
-/* Info Alert Styling */
 .info-alert {
-  background-color: #ffcc00; /* Yellow background */
-  color: #000; /* Black text color */
+  background-color: #ffcc00; 
+  color: #000; 
   padding: 10px;
   border-radius: 5px;
   margin-bottom: 15px;
@@ -97,7 +96,6 @@
   opacity: 0;
 }
 
-/* Info Button Styling */
 .info-button {
   background-color: #f0ad4e;
   color: white;
@@ -120,7 +118,7 @@
 .legend-container li {
   display: flex;
   align-items: center;
-  margin-bottom: 1rem; /* Meer ruimte tussen items */
+  margin-bottom: 1rem; 
 }
 
 .legend-container img {
@@ -129,7 +127,7 @@
 }
 
 .legend-container span {
-  font-size: 1.25rem; /* Grotere tekst */
+  font-size: 1.25rem;
   color: #333;
   font-weight: 500;
 }
