--- a/src/app/components/frontpage/frontpage.component.html
+++ b/src/app/components/frontpage/frontpage.component.html
@@ -59,7 +59,7 @@
                     <span class="star">★</span>
                     <span class="star">☆</span>
                   </p>
-                </div><!-- /.col-lg-4 -->
+                </div>
                 <div class="col-lg-4">
                     <img 
                     src="../../../assets/Schermafbeelding 2025-01-13 134407.png" 
